# LVGL-ILI9341-ControlCenter

./: Huong dan chi tiet xay dung du an.docx  README.md
code_test_udp_esp/MainCode/: MainCode.ino
code_test_udp_python/: test_receive_data_UDP.py
demo_flash_png/demo_flag_png/: PNGdec.h
demo_touch_screen/demo_touch_screen/: demo_touch_screen.ino
examples/AsyncUDPServer/: AsyncUDPServer.ino
examples/ui_project_1_lvgl_v8-3-6/Squareline_saved/: ui_demo_lvgl.sll
examples/ui_project_1_lvgl_v9-1-0/Source_code/Squareline _compiled_code/: CMakeLists.txt
examples/ui_project_1_lvgl_v9-1-0/Source_code/Squareline _compiled_code/images/: ui_img_electricity_png.c  ui_img_smartwatch_png.c  ui_img_temperature_png.c
examples/ui_project_1_lvgl_v9-1-0/Source_code/Squareline _compiled_code/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c
examples/ui_project_1_lvgl_v9-1-0/Squareline_saved/: ui_demo_lvgl.sll
main_source/Source_code/Squareline _compiled_code/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c
main_source/Source_code/Squareline _compiled_code/images/: ui_img_1046260344.c  ui_img_1270191234.c  ui_img_2024947378.c  ui_img_minus_png.c  ui_img_seconds_png.c
main_source/Source_code/Squareline _compiled_code/screens/: ui_Screen3.c  ui_Screen4.c  ui_Screen5.c
main_source/Source_code/main/: main.ino  (+11 more)
main_source/Squareline_saved/: ui_demo_lvgl.sll  ui_demo_lvgl.spj  ui_demo_lvgl_events.py
ui_project_1_lvgl_v8-3-6/Squareline_saved/: ui_demo_lvgl.sll  ui_demo_lvgl.spj  ui_demo_lvgl_events.py
ui_project_1_lvgl_v9-1-0/Squareline_saved/: ui_demo_lvgl.spj
(+59 files in other folders)
